--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@ html {
 }
 
 * {
+  font-family: "Source Sans Pro", sans-serif;
   letter-spacing: 0.1em;
 }
 
@@ -24,7 +25,18 @@ nav {
   width: 15vw;
   height: 100vh;
   position: fixed;
+  background-color: var(--blue);
 }
+
+nav img {
+}
+
+nav a {
+  background-color: var(--blue);
+  color: var(--darkvelvet);
+}
+
+/* Header section about the About Me */
 
 header {
   display: inline-flex;
@@ -35,6 +47,13 @@ header {
   position: absolute;
   top: 0;
   left: 15vw;
+  background-color: var(--white);
+}
+
+header img {
+}
+
+header h1 {
 }
 
 /* About Me Section */
@@ -47,6 +66,7 @@ header {
   position: absolute;
   top: 40vh;
   left: 15vw;
+  background-color: var(--snow);
 }
 
 #aboutme img {
@@ -59,6 +79,13 @@ header {
   width: 30vw;
   height: 40vh;
   margin: 5vh 0;
+  background-color: var(--lightsnow);
+}
+
+#aboutme h3 {
+}
+
+#aboutme p {
 }
 
 /* Project Section */
@@ -74,6 +101,7 @@ main {
   position: absolute;
   top: 90vh;
   left: 15vw;
+  background-color: var(--gloomyday);
 }
 
 .projectsection {
@@ -84,10 +112,33 @@ main {
   height: 20vh;
 }
 
+.projectsection h3 {
+  color: var(--white);
+}
+
+#proj-group1 {
+  background-image: url(https://images.unsplash.com/photo-1607706189992-eae578626c86?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGh0bWx8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+}
+
+#proj-group2 {
+  color: darkslategrey;
+  background-image: url(https://images.unsplash.com/photo-1543966888-7c1dc482a810?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8amF2YXNjcmlwdHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+  object-position: center;
+}
+
+#proj-group3 {
+  background-image: url(https://images.unsplash.com/photo-1517180102446-f3ece451e9d8?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Ym9vdHN0cmFwfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+}
+
 .projectlist {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.projectlist p {
+  background-color: var(--darkvelvet);
+  color: var(--gloomyday);
 }
 
 /* Contact Me Section */
@@ -102,6 +153,7 @@ main {
   position: absolute;
   top: 180vh;
   left: 15vw;
+  background-color: var(--white);
 }
 
 #contactinfo div {
@@ -109,6 +161,11 @@ main {
   justify-content: space-around;
   width: 60vw;
   height: 5vw;
+}
+
+#contactinfo div a,
+#contactinfo h3 {
+  color: var(--darkvelvet);
 }
 
 /* Add Media Queries beneath here */
