--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ nav a {
 
 header {
   display: inline-flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 84vw;
   height: 40vh;
@@ -67,8 +67,9 @@ header {
 }
 
 header img {
-  width: 17vw;
+  width: 20vw;
   height: auto;
+  margin-left: 5vw;
 }
 
 header h1 {
@@ -79,6 +80,7 @@ header h1 {
   padding: 0;
   font-size: 10vh;
   line-height: 1;
+  margin-right: 5vw;
 }
 
 /* Below section of rulesets is the styling for the 'About Me' section */
@@ -114,7 +116,7 @@ header h1 {
 
 #aboutme h3,
 #aboutme p {
-  font-size: 1.25vw;
+  font-size: 1.4vw;
 }
 
 /* Below set of rulesets are for the project section. This section is made up of 3 nested flexboxes to aide in element spacing. The heiherarcy of the box classes/ids, beginning with largest, is main(element), projectsection(class), projectlist(class). */
@@ -283,12 +285,21 @@ main {
     top: 15vh;
   }
 
+  header img {
+    display: none;
+  }
+
   #aboutme {
     top: 55vh;
   }
 
   #aboutme img {
     width: 30vh;
+  }
+
+  #aboutme h3,
+  #aboutme p {
+    font-size: 2vw;
   }
 
   #mywork {
@@ -306,5 +317,16 @@ main {
 
   #contactinfo {
     top: 185vh;
+  }
+
+  #contactinfo h3 {
+    font-size: 4vw;
+  }
+
+  #contactinfo img {
+    width: 5vw;
+  }
+  #contactinfo a {
+    font-size: 3vw;
   }
 }
